--- a/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
@@ -17,20 +17,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy.stats import f_oneway\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "\n",
@@ -63,14 +205,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fairy',\n",
+       " nan,\n",
+       " 'Steel',\n",
+       " 'Water',\n",
+       " 'Dragon',\n",
+       " 'Rock',\n",
+       " 'Dark',\n",
+       " 'Poison',\n",
+       " 'Ground',\n",
+       " 'Fire',\n",
+       " 'Ghost',\n",
+       " 'Grass',\n",
+       " 'Fighting',\n",
+       " 'Ice',\n",
+       " 'Normal',\n",
+       " 'Flying',\n",
+       " 'Psychic',\n",
+       " 'Electric',\n",
+       " 'Bug']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "\n",
-    "len(unique_types) # you should see 19"
+    "unique_types_pre = pokemon['Type 1'].unique().tolist()+ pokemon['Type 2'].unique().tolist()\n",
+    "unique_types_1= set(unique_types_pre)\n",
+    "unique_types=list(unique_types_1)\n",
+    "unique_types\n",
+    "# you should see 19"
    ]
   },
   {
@@ -90,15 +262,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pokemon_totals = []\n",
-    "\n",
-    "# Your code here\n",
+    "for i in unique_types:\n",
+    "    if type(i)!=float:\n",
+    "        pokemon_totals.append(pokemon[(pokemon['Type 2']==i)]['Total'])or(pokemon[(pokemon['Type 1']==i)]['Total'])\n",
     "\n",
     "len(pokemon_totals) # you should see 18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[44     270\n",
+       " 45     435\n",
+       " 131    460\n",
+       " 188    210\n",
+       " 198    250\n",
+       " 199    420\n",
+       " 303    198\n",
+       " 304    278\n",
+       " 305    518\n",
+       " 306    618\n",
+       " 322    190\n",
+       " 328    380\n",
+       " 329    480\n",
+       " 366    590\n",
+       " 487    310\n",
+       " 591    545\n",
+       " 606    280\n",
+       " 607    480\n",
+       " 772    431\n",
+       " 773    500\n",
+       " 777    470\n",
+       " 795    600\n",
+       " 796    700\n",
+       " Name: Total, dtype: int64, 88     325\n",
+       " 89     465\n",
+       " 220    465\n",
+       " 228    500\n",
+       " 229    600\n",
+       " 440    530\n",
+       " 455    350\n",
+       " 456    495\n",
+       " 460    424\n",
+       " 497    525\n",
+       " 498    625\n",
+       " 513    535\n",
+       " 528    525\n",
+       " 542    600\n",
+       " 589    508\n",
+       " 650    495\n",
+       " 658    305\n",
+       " 659    489\n",
+       " 685    340\n",
+       " 686    490\n",
+       " 693    484\n",
+       " 717    600\n",
+       " Name: Total, dtype: int64, 149    355\n",
+       " 150    495\n",
+       " 151    355\n",
+       " 152    495\n",
+       " 307    269\n",
+       " 398    290\n",
+       " 399    410\n",
+       " 400    530\n",
+       " 445    410\n",
+       " 533    520\n",
+       " 758    306\n",
+       " 759    500\n",
+       " 760    320\n",
+       " 799    600\n",
+       " Name: Total, dtype: int64, 7      634\n",
+       " 196    610\n",
+       " 249    540\n",
+       " 275    630\n",
+       " 360    340\n",
+       " 361    520\n",
+       " 540    680\n",
+       " 541    680\n",
+       " 544    680\n",
+       " 545    680\n",
+       " 694    300\n",
+       " 695    420\n",
+       " 696    600\n",
+       " 761    494\n",
+       " 766    362\n",
+       " 767    521\n",
+       " 790    245\n",
+       " 791    535\n",
+       " Name: Total, dtype: int64, 119    345\n",
+       " 120    485\n",
+       " 230    505\n",
+       " 237    410\n",
+       " 240    380\n",
+       " 330    330\n",
+       " 331    430\n",
+       " 332    530\n",
+       " 404    485\n",
+       " 515    535\n",
+       " 618    325\n",
+       " 619    475\n",
+       " 625    355\n",
+       " 626    495\n",
+       " Name: Total, dtype: int64, 141    640\n",
+       " 267    600\n",
+       " 268    700\n",
+       " 297    340\n",
+       " 298    480\n",
+       " 347    305\n",
+       " 348    460\n",
+       " 349    560\n",
+       " 363    475\n",
+       " 374    468\n",
+       " 482    329\n",
+       " 483    479\n",
+       " 490    485\n",
+       " 502    500\n",
+       " 611    292\n",
+       " 612    351\n",
+       " 613    519\n",
+       " 726    530\n",
+       " 743    495\n",
+       " 798    680\n",
+       " Name: Total, dtype: int64, 0      318\n",
+       " 1      405\n",
+       " 2      525\n",
+       " 3      625\n",
+       " 16     195\n",
+       " 17     205\n",
+       " 18     395\n",
+       " 19     495\n",
+       " 48     320\n",
+       " 49     395\n",
+       " 50     490\n",
+       " 53     305\n",
+       " 54     450\n",
+       " 75     300\n",
+       " 76     390\n",
+       " 77     490\n",
+       " 78     335\n",
+       " 79     515\n",
+       " 99     310\n",
+       " 100    405\n",
+       " 101    500\n",
+       " 102    600\n",
+       " 181    250\n",
+       " 182    390\n",
+       " 227    430\n",
+       " 292    385\n",
+       " 344    400\n",
+       " 451    280\n",
+       " 452    515\n",
+       " 603    260\n",
+       " 604    360\n",
+       " 605    485\n",
+       " 651    294\n",
+       " 652    464\n",
+       " Name: Total, dtype: int64, 36     505\n",
+       " 39     505\n",
+       " 80     300\n",
+       " 81     390\n",
+       " 82     495\n",
+       " 103    385\n",
+       " 209    210\n",
+       " 210    430\n",
+       " 223    510\n",
+       " 224    610\n",
+       " 238    250\n",
+       " 239    450\n",
+       " 265    300\n",
+       " 266    410\n",
+       " 281    405\n",
+       " 282    535\n",
+       " 283    635\n",
+       " 314    266\n",
+       " 352    305\n",
+       " 353    460\n",
+       " 354    560\n",
+       " 371    288\n",
+       " 372    468\n",
+       " 434    525\n",
+       " 459    424\n",
+       " 470    475\n",
+       " 491    300\n",
+       " 492    410\n",
+       " 493    600\n",
+       " 494    700\n",
+       " 524    530\n",
+       " 596    384\n",
+       " 597    509\n",
+       " 728    423\n",
+       " 794    600\n",
+       " Name: Total, dtype: int64, 246    330\n",
+       " 247    500\n",
+       " 248    600\n",
+       " 424    770\n",
+       " 532    520\n",
+       " 553    600\n",
+       " 668    275\n",
+       " 669    370\n",
+       " 670    520\n",
+       " 697    360\n",
+       " 698    550\n",
+       " 706    680\n",
+       " Name: Total, dtype: int64, 316    236\n",
+       " 326    380\n",
+       " 327    480\n",
+       " 530    480\n",
+       " 531    440\n",
+       " 653    335\n",
+       " 654    480\n",
+       " 683    303\n",
+       " 684    483\n",
+       " 748    325\n",
+       " 749    448\n",
+       " 750    520\n",
+       " 751    520\n",
+       " 797    600\n",
+       " Name: Total, dtype: int64, 51     285\n",
+       " 52     405\n",
+       " 271    600\n",
+       " 293    220\n",
+       " 294    340\n",
+       " 295    480\n",
+       " 377    355\n",
+       " 378    495\n",
+       " 458    424\n",
+       " 536    520\n",
+       " 600    310\n",
+       " 601    380\n",
+       " 602    500\n",
+       " 646    335\n",
+       " 647    475\n",
+       " 778    309\n",
+       " 779    474\n",
+       " 780    335\n",
+       " 781    335\n",
+       " 782    335\n",
+       " 783    335\n",
+       " 784    494\n",
+       " 785    494\n",
+       " 786    494\n",
+       " 787    494\n",
+       " Name: Total, dtype: int64, 67     510\n",
+       " 163    780\n",
+       " 231    500\n",
+       " 232    600\n",
+       " 277    405\n",
+       " 278    530\n",
+       " 279    630\n",
+       " 310    460\n",
+       " 436    405\n",
+       " 437    534\n",
+       " 476    580\n",
+       " 503    300\n",
+       " 504    490\n",
+       " 526    518\n",
+       " 527    618\n",
+       " 558    418\n",
+       " 559    528\n",
+       " 620    348\n",
+       " 621    488\n",
+       " 699    580\n",
+       " 700    580\n",
+       " 701    580\n",
+       " 713    580\n",
+       " 714    580\n",
+       " 716    600\n",
+       " 720    530\n",
+       " Name: Total, dtype: int64, 94     475\n",
+       " 98     525\n",
+       " 142    535\n",
+       " 233    430\n",
+       " 509    334\n",
+       " 510    494\n",
+       " 511    594\n",
+       " 512    510\n",
+       " 534    520\n",
+       " 710    660\n",
+       " 711    700\n",
+       " 712    700\n",
+       " 768    362\n",
+       " 769    521\n",
+       " Name: Total, dtype: int64, 735    369\n",
+       " 736    507\n",
+       " 764    289\n",
+       " 765    481\n",
+       " Name: Total, dtype: int64, 6      534\n",
+       " 8      634\n",
+       " 15     395\n",
+       " 20     251\n",
+       " 21     349\n",
+       " 22     479\n",
+       " 23     579\n",
+       " 26     262\n",
+       " 27     442\n",
+       " 46     245\n",
+       " 47     455\n",
+       " 90     352\n",
+       " 91     310\n",
+       " 92     460\n",
+       " 132    500\n",
+       " 137    600\n",
+       " 140    540\n",
+       " 153    515\n",
+       " 154    615\n",
+       " 156    580\n",
+       " 157    580\n",
+       " 158    580\n",
+       " 161    600\n",
+       " 177    262\n",
+       " 178    442\n",
+       " 179    265\n",
+       " 180    390\n",
+       " 183    535\n",
+       " 190    405\n",
+       " 191    320\n",
+       "       ... \n",
+       " 519    545\n",
+       " 520    515\n",
+       " 523    510\n",
+       " 535    520\n",
+       " 551    600\n",
+       " 578    264\n",
+       " 579    358\n",
+       " 580    488\n",
+       " 586    313\n",
+       " 587    425\n",
+       " 622    490\n",
+       " 627    401\n",
+       " 628    567\n",
+       " 641    305\n",
+       " 642    473\n",
+       " 648    428\n",
+       " 688    350\n",
+       " 689    510\n",
+       " 690    370\n",
+       " 691    510\n",
+       " 704    580\n",
+       " 705    580\n",
+       " 708    600\n",
+       " 709    600\n",
+       " 729    278\n",
+       " 730    382\n",
+       " 731    499\n",
+       " 734    411\n",
+       " 771    500\n",
+       " 793    680\n",
+       " Name: Total, Length: 97, dtype: int64, 85     315\n",
+       " 86     490\n",
+       " 87     590\n",
+       " 110    325\n",
+       " 111    520\n",
+       " 130    520\n",
+       " 133    455\n",
+       " 214    490\n",
+       " 218    455\n",
+       " 257    305\n",
+       " 334    280\n",
+       " 335    410\n",
+       " 336    510\n",
+       " 369    440\n",
+       " 370    440\n",
+       " 375    300\n",
+       " 376    500\n",
+       " 410    300\n",
+       " 411    420\n",
+       " 412    600\n",
+       " 413    700\n",
+       " 417    600\n",
+       " 418    700\n",
+       " 419    600\n",
+       " 420    700\n",
+       " 427    600\n",
+       " 484    300\n",
+       " 485    500\n",
+       " 616    540\n",
+       " 715    600\n",
+       " 723    534\n",
+       " 756    288\n",
+       " 757    482\n",
+       " Name: Total, dtype: int64, 184    330\n",
+       " 185    460\n",
+       " 656    319\n",
+       " 657    472\n",
+       " 679    471\n",
+       " 707    680\n",
+       " Name: Total, dtype: int64, 379    355\n",
+       " 380    495\n",
+       " 501    330\n",
+       " Name: Total, dtype: int64]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon_totals"
    ]
   },
   {
@@ -116,11 +698,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=2.7463260975846784, pvalue=0.00024695147909881604)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "f_oneway(*pokemon_totals)"
    ]
   },
   {
