--- a/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "19"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -252,17 +252,16 @@
        "18"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pokemon_totals = []\n",
-    "\n",
     "for unique in unique_types:\n",
     "    if type(unique)!=float:\n",
-    "        pokemon_totals.append(pokemon[(pokemon['Type 2']==unique)]['Total'])\n",
+    "        pokemon_totals.append(pokemon[(pokemon['Type 2']==unique) | (pokemon['Type 1']==unique)]['Total'])\n",
     "len(pokemon_totals)"
    ]
   },
@@ -281,16 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
+   "execution_count": 132,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "F_onewayResult(statistic=2.7463260975846784, pvalue=0.00024695147909881604)"
+       "F_onewayResult(statistic=6.617538296005533, pvalue=2.6457458815984803e-15)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
