--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "Name: Legendary, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,14 +454,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "#como es menor que 0,05 se rechaza la hipótesis\n",
-    "#las variables son independientes.\n"
+    "H0: No hay diferencia entre los parámetros\n",
+    "H1: Hay diferencia entre los parámetros\n",
+    "\n",
+    "Podemos rechazar la hipótesis inicial ya que PValue es inferior a 0,05 y las variables son independientes.\n"
    ]
   },
   {
@@ -473,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +499,7 @@
        "Name: Type 1, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +557,7 @@
        "Ttest_indResult(statistic=-0.4418547448849676, pvalue=0.6587140317488793)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,12 +575,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Como el Pvalue es superior a 0,05: es posible que haya cierta dependencia entre las dos medias.\n"
+    "H0: No hay diferencia entre los parámetros\n",
+    "H1: Hay diferencia entre los parámetros\n",
+    "\n",
+    "Como el Pvalue es superior a 0,05: es posible que haya cierta dependencia entre las dos medias y no podemos rechazar la hipótesis H0.\n"
    ]
   },
   {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,13 +624,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Como el PValue es inferior a 0,05: existe cierta independiencia entre las dos medias, y por lo tanto, \n",
-    "#entre las dos columnas. Por lo tanto la H0 sería incorrecta.\n"
+    "H0: No hay diferencia entre los parámetros H1: Hay diferencia entre los parámetros\n",
+    "\n",
+    "Como el Pvalue es inferior a 0,05: hay independencia entre las dos y podemos rechazar la hipótesis H0.\n"
    ]
   },
   {
@@ -671,14 +670,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "#Como el PValue es superior a 0,05: podemos decir que hay un grado de dependencia entre las dos medias, \n",
-    "#y por lo tanto, las dos columnas (contrariamente a lo que ocurre con 'defense' y 'attack')."
+    "Como el PValue es superior a 0,05: podemos decir que hay un grado de dependencia entre las dos medias, y por lo tanto, las dos columnas (contrariamente a lo que ocurre con 'defense' y 'attack')."
    ]
   },
   {
@@ -832,7 +827,7 @@
    "outputs": [],
    "source": [
     "# Your answer here:\n",
-    "# 0,86 > 0,05 por lo tanto no se puede rechazar la hipótesis.\n"
+    "# PValue 0,86 > 0,05 por lo tanto no se puede rechazar la hipótesis.\n"
    ]
   }
  ],
