--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,8 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Legendary Pokemon .........\n",
-    "\n"
+    "# As we observe a pvalue smaller than the threshold, then we reject the null hypothesis of identical total points\n",
+    "# for legendary and non-legendary Pokemon.\n"
    ]
   },
   {
@@ -390,43 +390,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "435.859"
+       "Ttest_indResult(statistic=-0.012145227832858266, pvalue=0.9908913590365129)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "water_mean\n",
-    "non_water_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=nan, pvalue=nan)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ttest_ind(water_mean, non_water_mean)"
+    "w = (430.455,113.188,1000)\n",
+    "nw = (435.859,121.092,1000)\n",
+    "\n",
+    "ttest_ind(w, nw)"
    ]
   },
   {
@@ -442,8 +424,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "# As we observe a pvalue larger than 0.05 or 0.1, then we cannot reject the null hypothesis of identical\n",
+    "# average scores.\n"
    ]
   },
   {
