--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -439,12 +439,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from scipy.stats import ttest_rel\n",
+    "\n",
+    "ttest_rel(pokemon['Attack'],pokemon['Defense'])"
    ]
   },
   {
@@ -460,8 +472,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "# As we observe a pvalue smaller than the threshold, then we reject the null hypothesis of identical defense\n",
+    "# and attack scores.\n"
    ]
   },
   {
