--- a/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -293,13 +293,12 @@
        "F_onewayResult(statistic=6.617538296005533, pvalue=2.6457458815984803e-15)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your code here\n",
     "\n",
     "stats.f_oneway(*pokemon_totals)\n"
    ]
@@ -312,14 +311,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the values obtained computing the means of distinc groups, we can reject the null hyptohesis (H0), since pvalue is smaller than 0.05. This means that the variance among population means is high\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your comment here\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
