Challenge 2 - no sé cómo hacer el último

--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "# Run this code:\n",
     "\n",
-    "pokemon = pd.read_csv('../pokemon.csv')"
+    "pokemon = pd.read_csv('../pokemon.csv')\n"
    ]
   },
   {
@@ -408,7 +408,8 @@
     "w = (430.455,113.188,1000)\n",
     "nw = (435.859,121.092,1000)\n",
     "\n",
-    "ttest_ind(w, nw)"
+    "ttest_ind(w, nw)\n",
+    "\n"
    ]
   },
   {
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
        "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +457,7 @@
    "source": [
     "from scipy.stats import ttest_rel\n",
     "\n",
-    "ttest_rel(pokemon['Attack'],pokemon['Defense'])"
+    "ttest_rel(pokemon['Attack'],pokemon['Defense'])\n"
    ]
   },
   {
@@ -485,11 +486,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.82 32.722 71.902 27.829\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=1.289983570023689, pvalue=0.32608824451467633)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "sp_atk = round(pokemon['Sp. Atk'].mean(),3)\n",
+    "sdsa = round(stdev(pokemon['Sp. Atk']),3)\n",
+    "\n",
+    "sp_def = round(pokemon['Sp. Def'].mean(),3)\n",
+    "sdsd = round(stdev(pokemon['Sp. Def']),3)\n",
+    "\n",
+    "print(sp_atk, sdsa, sp_def, sdsd)\n",
+    "\n",
+    "sa = (sp_atk,sdsa,1000)\n",
+    "sd = (sp_def,sdsd,1000)\n",
+    "\n",
+    "ttest_rel(sa, sd)\n",
     "\n"
    ]
   },
@@ -506,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
+    "# As we observe a pvalue larger than 0.05 or 0.1, then we cannot reject the null hypothesis of identical\n",
+    "# mean of special defense and mean of special attack.\n",
     "\n"
    ]
   },
@@ -521,12 +552,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=1.099021689469239, pvalue=0.38638025336798065)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "    \n",
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "atk = round(pokemon['Attack'].mean(),3)\n",
+    "sda = round(stdev(pokemon['Attack']),3)\n",
+    "\n",
+    "dfs = round(pokemon['Defense'].mean(),3)\n",
+    "sdd = round(stdev(pokemon['Defense']),3)\n",
+    "\n",
+    "params = (atk-dfs, sda-sdd, 100)\n",
+    "ttest_1samp(params, 0)\n",
     "    "
    ]
   },
