--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -400,12 +400,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "# Your code here:\n"
    ]
   },
   {
@@ -471,7 +470,8 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "#Si pvalor es menor que mi nivel de significación rechazo\n",
+    "#asumiendo un nivel de significanción del 5%, rechazaría la hipótesis nula"
    ]
   },
   {
@@ -516,7 +516,7 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "#asumiendo un nivel de significanción del 5%, rechazaría la hipótesis nula\n"
    ]
   },
   {
